--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.first.kritikm.hdk.MainActivity">
 
-    <TextView
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fabMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        fab:menu_labels_position="left"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Test"
-        android:onClick="test"/>
+        <com.github.clans.fab.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_label="Use Camera"
+            android:src="@drawable/ic_camera"
+            fab:fab_colorNormal="#ef6c00"
+            fab:fab_colorPressed="#ef4c00"
+            fab:fab_colorRipple="#ff8a65"
+            android:onClick="test"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fromGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_from_gallery"
+            fab:fab_label="Choose Existing"
+            fab:fab_colorNormal="#ef6c00"
+            fab:fab_colorPressed="#ef4c00"
+            fab:fab_colorRipple="#ff8a65"
+            android:onClick="test"/>
+
+
+    </com.github.clans.fab.FloatingActionMenu>
+
+
+
 </RelativeLayout>
