--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.first.kritikm.hdk.MainActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <GridView
+            android:id="@+id/imageGrid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="4"
+            android:verticalSpacing="4dp"
+            android:horizontalSpacing="4dp"
+            android:stretchMode="columnWidth">
+
+        </GridView>
+
+    </ScrollView>
+
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/fabMenu"
         android:layout_width="wrap_content"
@@ -26,7 +43,7 @@
             fab:fab_colorNormal="#ef6c00"
             fab:fab_colorPressed="#ef4c00"
             fab:fab_colorRipple="#ff8a65"
-            android:onClick="test"/>
+            android:onClick="getImageFromCamera"/>
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fromGallery"
@@ -37,7 +54,7 @@
             fab:fab_colorNormal="#ef6c00"
             fab:fab_colorPressed="#ef4c00"
             fab:fab_colorRipple="#ff8a65"
-            android:onClick="test"/>
+            android:onClick="getImageFromGallery"/>
 
 
     </com.github.clans.fab.FloatingActionMenu>
