--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:background="#000"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.first.kritikm.hdk.MainActivity">
 
     <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <GridView
-            android:id="@+id/imageGrid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="4"
-            android:verticalSpacing="4dp"
-            android:stretchMode="columnWidth">
-
-
-
-        </GridView>
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
 
     <!--</ScrollView>-->
 
@@ -30,34 +19,71 @@
         android:id="@+id/fabMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        fab:menu_labels_position="left"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true">
+        android:elevation="1000dp"
+
+        fab:menu_fab_show_animation="@anim/fab_slide_in_from_left"
+        fab:menu_labels_position="left"
+        fab:menu_showShadow="true">
 
         <com.github.clans.fab.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            fab:fab_label="Use Camera"
+            android:onClick="getImageFromCamera"
+
             android:src="@drawable/ic_camera"
             fab:fab_colorNormal="#ef6c00"
             fab:fab_colorPressed="#ef4c00"
             fab:fab_colorRipple="#ff8a65"
-            android:onClick="getImageFromCamera"/>
+            fab:fab_label="Use Camera" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fromGallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="getImageFromGallery"
             android:src="@drawable/ic_from_gallery"
-            fab:fab_label="Choose Existing"
             fab:fab_colorNormal="#ef6c00"
             fab:fab_colorPressed="#ef4c00"
             fab:fab_colorRipple="#ff8a65"
-            android:onClick="getImageFromGallery"/>
+            fab:fab_label="Choose Existing" />
 
 
     </com.github.clans.fab.FloatingActionMenu>
+    <!--<TextView-->
+    <!--android:id="@+id/tv1"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:textColor="#fff"-->
+    <!--android:text="Lonely Here"-->
+    <!--android:visibility="invisible"/>-->
+    <ImageView
 
+        android:id="@+id/img1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:clickable="false"
+        android:longClickable="false"
+        android:src="@drawable/lonely"
+        android:visibility="invisible" />
+
+    <GridView
+
+        android:id="@+id/imageGrid"
+        style="@android:style/Widget.DeviceDefault.GridView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="4"
+        android:padding="2dp"
+        android:smoothScrollbar="true"
+        android:stretchMode="columnWidth"
+        android:verticalScrollbarPosition="defaultPosition"
+        android:verticalSpacing="4dp">
+
+
+    </GridView>
 
 
 </RelativeLayout>
